src/snapshots/afrotd__parser__tests__rule_2.27.7.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 27
  - 7
title: Runner und Ballträger
text: "\ta) Der Runner ist ein Spieler, der sich im Besitz eines Live Balls befindet oder der den Besitz des Live Balls vortäuscht.\n\tb) Ein Ballträger ist ein Runner, der sich tatsächlich im Besitz eines Live Balls befindet."
interpretations: []
