src/snapshots/afrotd__parser__tests__rule_2.27.8.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 27
  - 8
title: Snapper
text: "Ein Snapper ist der Spieler, der den Snap durchführt. Er wird zum Snapper, wenn er seine Position hinter dem Ball einnimmt und den Ball berührt oder das Berühren vortäuscht (Hand/Hände an oder unterhalb seiner Knie) (Regel 7.1.3)."
interpretations: []
