src/snapshots/afrotd__parser__tests__rule_2.28.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 28
  - 1
title: Tripping
text: "Tripping (Beinstellen) ist der absichtliche Einsatz des eigenen Schienbeins oder des Fußes, um einen Gegner zu behindern, wobei dieser unterhalb des Knies getroffen wird (Regel 9.1.2.c)."
interpretations: []
