src/snapshots/afrotd__parser__tests__rule_2.29.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 29
  - 1
title: Game Clock
text: "Die Game Clock ist jede Zeitnahme-Vorrichtung, die von dem zuständigen Schiedsrichter benutzt wird, um die Spielzeit zu messen."
interpretations: []
