src/snapshots/afrotd__parser__tests__rule_2.3.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 3
  - 3
title: Chop Block
text: "Ein Chop Block ist ein hoch/tief oder tief/hoch kombinierter Block durch zwei Spieler gegen einen Gegner (außer einem Ballträger), mit oder ohne Verzögerung zwischen den Blocks, auf dem gesamten Feld, wobei der tiefe Kontakt sich an oder unter den Oberschenkeln des Gegners ereignet (A.R. 9.1.10.I bis 9.1.10.IV). Es ist kein Foul, wenn der Kontakt vom gegnerischen Spieler ausgeht (A.R. 9.1.10.V)."
interpretations: []
