src/snapshots/afrotd__parser__tests__rule_2.3.5.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 3
  - 5
title: Körperrahmen
text: "Der Körperrahmen eines Spielers befindet sich, mit Ausnahme des Rückens, an den Schultern und darunter (Regel 9.3.3.a.1.b Ausnahme)."
interpretations: []
